# libvirt

./: .git-module-status  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpublish  .mailmap  .travis.yml  0001-libxl-Implement-virDomainObjCheckIsActive.patch  0002-change-virDomainObjIsActive-with-virDomainObjCheckIs.patch  0003-libxl-Change-virDomainObjIsActive-to-virDomainObjChe.patch  AUTHORS.in  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog-old  HACKING  MAINTAINERS  Makefile.am  Makefile.ci  Makefile.in  NEWS.rst  README  README-hacking  README.md  README.rst  aclocal.m4  autogen.sh  bootstrap.conf  cfg.mk  config-post.h  config.h  config.h.in  configure  configure.ac  dom.xml  fix-files.sh  gitdm.config  libvirt.spec.in  mem.xml  meson.build  meson_options.txt  (+12 more)
build-aux/: GNUmakefile  Makefile.in  Makefile.nonreentrant  augeas-gentest.pl  augeas-gentest.py  cfg.mk  check-spacing.pl  check-spacing.py  dist.py  get_maintainer.pl  header-ifdef.pl  header-ifdef.py  meson.build  minimize-po.py  mock-noinline.pl  mock-noinline.py  prohibit-duplicate-header.py  syntax-check.mk  useless-if-before-free  vc-list-files
build-aux/generator/: directive.py  go  main.py  utils.py
docs/internals/: command.html.in  meson.build
docs/kbase/: backing_chains.rst  debuglogs.rst  incrementalbackupinternals.rst  index.rst  kvm-realtime.rst  launch_security_sev.html.in  launch_security_sev.rst  meson.build  migrationinternals.rst  protected_virtualization.rst  qemu-passthrough-security.rst  s390_protected_virt.rst  systemtap.rst  virtiofs.rst
examples/: Makefile.am  Makefile.in  meson.build
examples/admin/: client_info.c  list_clients.c  logging.c
examples/apparmor/: libvirt-qemu  usr.lib.libvirt.virt-aa-helper  usr.sbin.libvirtd
examples/c/: meson.build
examples/domtop/: domtop.c
examples/object-events/: event-test.c
examples/polkit/: meson.build
examples/sh/: meson.build  virt-lxc-convert
examples/systemtap/: events.stp  lock-debug.stp  meson.build  qemu-monitor.stp  rpc-monitor.stp
examples/xml/: meson.build
src/: Makefile.am  Makefile.in  README  admin_protocol-structs  check-aclperms.py  check-aclrules.pl  check-aclrules.py  check-driverimpls.pl  check-driverimpls.py  check-drivername.py  check-remote-protocol.py  check-symfile.py  check-symsorting.py  datatypes.c  datatypes.h  driver-fs.h  driver-hypervisor.h  driver-interface.h  driver-network.h  driver-nodedev.h  driver-nwfilter.h  driver-secret.h  driver-state.h  driver-storage.h  driver-stream.h  driver.c  driver.h  dtrace2systemtap.py  internal.h  libvirt-admin.c  libvirt-domain-backup.c  libvirt-domain-checkpoint.c  libvirt-domain-snapshot.c  libvirt-domain.c  libvirt-fs.c  libvirt-host.c  libvirt-interface.c  libvirt-lxc.c  libvirt-network.c  libvirt-nodedev.c  (+21 more)
src/access/: Makefile.inc.am  genpolkit.py  meson.build  viraccessdriver.h  viraccessdrivernop.c  viraccessdrivernop.h  viraccessdriverpolkit.c  viraccessdriverpolkit.h  viraccessdriverstack.c  viraccessdriverstack.h  viraccessmanager.c  viraccessmanager.h  viraccessperm.c  viraccessperm.h
src/admin/: Makefile.inc.am  admin_protocol.x  admin_remote.c  admin_server.c  admin_server.h  admin_server_dispatch.c  admin_server_dispatch.h  libvirt-admin.c  libvirt_admin_private.syms  meson.build
src/bhyve/: Makefile.inc.am  bhyve_capabilities.c  bhyve_capabilities.h  bhyve_command.c  bhyve_command.h  bhyve_conf.c  bhyve_conf.h  bhyve_device.c  bhyve_device.h  bhyve_domain.c  bhyve_domain.h  bhyve_driver.c  bhyve_driver.h  bhyve_firmware.c  bhyve_monitor.c  bhyve_monitor.h  bhyve_parse_command.c  bhyve_parse_command.h  bhyve_process.c  bhyve_process.h  bhyve_utils.h  meson.build
src/conf/: Makefile.inc.am  backup_conf.c  backup_conf.h  capabilities.c  capabilities.h  checkpoint_conf.c  checkpoint_conf.h  cpu_conf.c  cpu_conf.h  device_conf.c  device_conf.h  domain_addr.c  domain_addr.h  domain_audit.c  domain_audit.h  domain_capabilities.c  domain_capabilities.h  domain_conf.c  domain_conf.h  domain_event.c  domain_event.h  domain_format.h  domain_nwfilter.c  domain_nwfilter.h  domain_parse.h  domain_validate.c  domain_validate.h  fs_conf.c  fs_conf.h  interface_conf.c  interface_conf.h  meson.build  moment_conf.c  moment_conf.h  netdev_bandwidth_conf.c  netdev_bandwidth_conf.h  netdev_vlan_conf.c  netdev_vlan_conf.h  netdev_vport_profile_conf.c  netdev_vport_profile_conf.h  (+84 more)
src/cpu/: Makefile.inc.am  cpu.c  cpu.h  cpu_arm.c  cpu_arm.h  cpu_arm_data.h  cpu_map.c  cpu_map.h  cpu_map.xml  cpu_map_x86_qemu64.xml  cpu_ppc64.c  cpu_ppc64.h  cpu_ppc64_data.h  cpu_s390.c  cpu_s390.h  cpu_x86.c  cpu_x86.h  cpu_x86_data.h
src/cpu_map/: Makefile.inc.am  arm_Falkor.xml  arm_Kunpeng-920.xml  arm_Phytium.xml  arm_ThunderX299xx.xml  arm_cortex-a53.xml  arm_cortex-a57.xml  arm_cortex-a72.xml  arm_features.xml  index.xml  meson.build  ppc64_POWER6.xml  ppc64_POWER7.xml  ppc64_POWER8.xml  ppc64_POWER9.xml  ppc64_POWERPC_e5500.xml  ppc64_POWERPC_e6500.xml  ppc64_vendors.xml  sync_qemu_i386.py  x86_486.xml  x86_Broadwell-IBRS.xml  x86_Broadwell-noTSX-IBRS.xml  x86_Broadwell-noTSX.xml  x86_Broadwell.xml  x86_Cascadelake-Server-noTSX.xml  x86_Conroe.xml  (+54 more)
tools/: Makefile.am  Makefile.in  libvirt-guests.sh.in  libvirt-guests.sysconf  libvirt_recover_xattrs.sh  meson.build  virsh-backup.c  virsh-backup.h  virsh-checkpoint.c  virsh-checkpoint.h  virsh-completer-checkpoint.c  virsh-completer-checkpoint.h  virsh-completer-domain.c  virsh-completer-domain.h  virsh-completer-host.c  virsh-completer-host.h  virsh-completer-interface.c  virsh-completer-interface.h  virsh-completer-network.c  virsh-completer-network.h  virsh-completer-nodedev.c  virsh-completer-nodedev.h  virsh-completer-nwfilter.c  virsh-completer-nwfilter.h  virsh-completer-pool.c  virsh-completer-pool.h  virsh-completer-secret.c  virsh-completer-secret.h  virsh-completer-snapshot.c  virsh-completer-snapshot.h  virsh-completer-volume.c  virsh-completer-volume.h  virsh-completer.c  virsh-completer.h  virsh-console.c  virsh-console.h  virsh-domain-monitor.c  virsh-domain-monitor.h  virsh-domain.c  virsh-domain.h  (+52 more)
(+3362 files in other folders)
